@@ -14,7 +14,6 @@ package org.openhab.binding.airq.internal;
 
 import static org.openhab.binding.airq.internal.AirqBindingConstants.THING_TYPE_AIRQ;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -38,7 +37,7 @@ import org.osgi.service.component.annotations.Reference;
 @Component(configurationPid = "binding.airq", service = ThingHandlerFactory.class)
 public class AirqHandlerFactory extends BaseThingHandlerFactory {
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_AIRQ);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_AIRQ);
     private final HttpClientFactory httpClientFactory;
 
     @Activate
